Experimenting with local setup of gh-pages

--- a/scripts/IronOS-mkdocs.yml
+++ b/scripts/IronOS-mkdocs.yml
@@ -1,10 +1,10 @@
 # Project info
 site_name: IronOS
-site_url: https://ralim.github.io/IronOS/
+site_url: https://ia.github.io/IronOSf/
 site_description: "IronOS Open Source Soldering Iron firmware for Miniware and Pinecil"
 
 # Repo config
-repo_url: https://github.com/ralim/IronOS/
+repo_url: https://github.com/ia/IronOSf/
 
 # Dir & location config
 docs_dir: ../Documentation
