--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,4 +34,4 @@ jobs:
       - run: git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Publish docs
-        run: python --version && mkdocs gh-deploy -f scripts/IronOS-mkdocs.yml -d ../site
+        run: python --version && lsb_release -a && mkdocs gh-deploy -f scripts/IronOS-mkdocs.yml -d ../site
