Fix GitHub Actions python version missing warning

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12.3'
 
       - run: |
           pip install --upgrade pip &&
